reviews article and adds share links to top of news single

--- a/site/layouts/news/single.html
+++ b/site/layouts/news/single.html
@@ -28,7 +28,8 @@
 					</div>
 
 		      <div class="article-body content">
-		          {{.Content | safeHTML }}
+		      	{{ partial "share-links" . }}
+		        {{.Content | safeHTML }}
 		      </div>
 
 	        <div class="article-footer text-muted">
