--- a/src/scss/abstracts/_custom.scss
+++ b/src/scss/abstracts/_custom.scss
@@ -80,7 +80,7 @@ $pink:    #ff5b77 !default;
 $red:     #e74c3c !default;
 $orange:  #e67e22 !default;
 $yellow:  #ffd500 !default;
-$green:   #2ecc71 !default;
+$green:   #27ae60 !default;
 $teal:    #1abc9c !default;
 $cyan:    #17a2b8 !default;
 
