design changes and fixes paragon youtube video

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,6 +1,6 @@
 /* Main navbar */
 .navbar-tropyc {
-  background: white;
+  background: $white;
   transition: all 0.3s ease;
   height: 70px;
   display: flex;
