--- a/src/scss/abstracts/_custom.scss
+++ b/src/scss/abstracts/_custom.scss
@@ -49,7 +49,7 @@
 // Color system
 //
 
-$white:  #fff !default;
+$white:  #fdfdfd !default;
 $gray-100: #f8f9fa !default;
 $gray-200: #e9ecef !default;
 $gray-300: #dee2e6 !default;
