fixes valuation in token sale table

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -7,7 +7,7 @@
 		<div class="row align-items-center">
 			<div class="col-md-6 order-2 order-md-1">
 				<div class="my-2">
-					<h1>Insights & ratings for cryptocurrency</h1>
+					<h1>Cryptocurrency insights and ICO ratings</h1>
 					<p>We made sure to put everything you need in one place.</p>
 					<p>With <b>Tropyc</b>, crypto becomes easy!</p>
 					<div class="mt-4">
