--- a/site/layouts/token-sales/list.html
+++ b/site/layouts/token-sales/list.html
@@ -42,7 +42,7 @@
 		          	</div>
 	          	</div>
 	          </td>
-	          <td class="{{ .Params.deal.headers.valuationHeader }}">{{ .Params.valuation.rows.total.value }}</td>
+	          <td class="{{ .Params.valuation.headers.header }}">{{ .Params.valuation.rows.total.value }}</td>
 	          <td>{{ .Params.valuation.rows.ico.cut }}</td>
 		        <td>{{ .Params.startDate | dateFormat "02/01/2006" }}</td>
 	          <td>{{ .Params.endDate | dateFormat "02/01/2006" }}</td>
