--- a/src/scss/pages/_landing.scss
+++ b/src/scss/pages/_landing.scss
@@ -35,7 +35,7 @@
 
 	.curve {
 	  position: absolute;
-	  background: white;
+	  background: $white;
 	  border-radius: 0 0 100% 100%;
 	  left: 0px;
 	  right: 0;
